parser/tests/good/identifier_shadowing.st
const i := 1

% begin-end block scope
begin
  const i := 1
end

% loop scope
loop
  const i := 1
end loop
