parser/tests/bad/contant-reassign.st
const i := 0
i := 1
